--- a/public/index/index.html
+++ b/public/index/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     Hello Worliiiid!!!
+    <form action="/login" method="POST">
+        <input type="submit" value="Login">
+    </form>
 </body>
 </html>
