--- a/public/index/index.html
+++ b/public/index/index.html
@@ -14,4 +14,5 @@
 <script src="../bower_components/requirejs/require.js"></script>
 <script src="../../public/app.js"></script>
 <script src="../../public/marketplace/marketplaceController.js"></script>
+<script src="../../public/dashboard/dashboardController.js"></script>
 </html>
