--- a/public/index/index.html
+++ b/public/index/index.html
@@ -12,7 +12,9 @@
 <script src="../bower_components/angular/angular.js"></script>
 <script src="../bower_components/angular-route/angular-route.js"></script>
 <script src="../bower_components/requirejs/require.js"></script>
+<script src="../bower_components/jquery/dist/jquery.js"></script>
+<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../../public/app.js"></script>
-<script src="../../public/marketplace/marketplaceController.js"></script>
+<script src="../../public/market/marketController.js"></script>
 <script src="../../public/dashboard/dashboardController.js"></script>
 </html>
