--- a/public/home/home.html
+++ b/public/home/home.html
@@ -37,9 +37,10 @@
 </body>
 <script src="../bower_components/angular/angular.js"></script>
 <script src="../bower_components/angular-route/angular-route.js"></script>
-<script src="../bower_components/requirejs/require.js"></script>
 <script src="../bower_components/jquery/dist/jquery.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript"  src="../../public/socket/socketClient.js"></script>
 <script src="../../public/app.js"></script>
 <script src="../../public/market/marketController.js"></script>
 <script src="../../public/dashboard/dashboardController.js"></script>
