added logic to load invoices from the database

--- a/public/market/marketView.html
+++ b/public/market/marketView.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="container col-xs-12 invoice">
+    <div class="container col-xs-12 invoice" ng-repeat="invoice in invoices">
         <div class="row col-md-2" style="padding: 0px; text-align: center">
             <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTKbL7eP8WcYWFZH4CR3Mk2yZx538fmr9YKtSebkUFFlLBBxvWEpW-GTZg" width="120" height="120">
         </div>
