added logic to load invoices from the database

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -8,7 +8,7 @@
 </head>
 <body class="well" ng-app="invoiceMarketplace" style="padding: 0px">
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default"  style="background-color: #ffffff; color: #999999; margin-bottom: 0px">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -17,15 +17,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">TIC</a>
+            <img src="../public/images/TicLogo.png" height="40" style="margin: 5px"/>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#market">Marketplace <span class="sr-only">(current)</span></a></li>
-            </ul>
+
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">My Dashboard</a></li>
+                <li><a href="#" style="color: #999999">MarketPlace</a></li>
+                <li><a href="#" style="color: #999999">Invest</a></li>
+                <li><a href="#" style="color: #999999">Trade Invoice</a></li>
+                <li><a href="#" style="color: #999999">About</a></li>
+                <li><a href="#" style="color: #999999">Logout</a></li>
             </ul>
         </div>
     </div>
