--- a/public/market/marketView.html
+++ b/public/market/marketView.html
@@ -1,5 +1,27 @@
-<div>
-    <div class="container col-lg-push-1 col-xs-10 invoice" ng-repeat="invoice in invoices">
+<div ng-repeat="invoice in invoices">
+    <div class="container col-lg-push-1 col-xs-10 invoice" style="padding: 0px">
+        <div class="col-xs-2" style="height: 40px; background-color: red">
+
+        </div>
+        <div class="col-xs-6" style="padding: 0px">
+            <div>
+                <h3>Company Name</h3>
+            </div>
+            <div>
+                <h6>16 Investors <span class="pull-right">7 Days</span></h6>
+            </div>
+            <div>
+                <h6>70% Funded <span class="pull-right">Target: £30,000</span></h6>
+            </div>
+        </div>
+        <div class="col-xs-2" style="height: 40px; background-color: pink">
+
+        </div>
+        <div class="col-xs-2" style="height: 40px; background-color: orange">
+
+        </div>
+    </div>
+   <!-- <div class="container col-lg-push-1 col-xs-10 invoice" >
         <div class="row col-md-2" style="padding: 0px; text-align: center">
             <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTKbL7eP8WcYWFZH4CR3Mk2yZx538fmr9YKtSebkUFFlLBBxvWEpW-GTZg" width="120" height="120">
         </div>
@@ -41,5 +63,5 @@
         <div class="row col-md-12" style="padding: 0px;margin:0px; height: 30px; background-color: #128f76; text-align: center; color: white;">
             <h5>100% Funded</h5>
         </div>
-    </div>
+    </div>-->
 </div>
