--- a/public/home/home.html
+++ b/public/home/home.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" style="color: #999999">MarketPlace</a></li>
+                <li><a href="#market" style="color: #999999">MarketPlace</a></li>
                 <li><a href="#" style="color: #999999">Invest</a></li>
                 <li><a href="#" style="color: #999999">Trade Invoice</a></li>
                 <li><a href="#" style="color: #999999">About</a></li>
