--- a/public/market/marketView.html
+++ b/public/market/marketView.html
@@ -1,67 +1,34 @@
 <div ng-repeat="invoice in invoices">
-    <div class="container col-lg-push-1 col-xs-10 invoice" style="padding: 0px">
-        <div class="col-xs-2" style="height: 40px; background-color: red">
-
-        </div>
+    <div class="container col-xs-push-1 col-xs-10 invoice" style="padding: 0px; vertical-align: middle;;">
+        <div class="col-xs-2" style="height: 100px; display: table-cell; vertical-align: middle" >
+            <img class="col-xs-12" src="../public/images/logo_{{invoice.companyCode}}.png" />
+            </div>
         <div class="col-xs-6" style="padding: 0px">
             <div>
-                <h3>Company Name</h3>
+                <h3>{{invoice.companyName}}</h3>
+                <h6>{{invoice.description}}</h6>
             </div>
             <div>
-                <h6>16 Investors <span class="pull-right">7 Days</span></h6>
+                <h6>{{invoice.numberOfInvestors}} Investors <span class="pull-right">{{invoice.daysLeftOnFunding}} Days</span></h6>
             </div>
             <div>
-                <h6>70% Funded <span class="pull-right">Target: £30,000</span></h6>
+                <h6>{{invoice.percentageFunded}}% Funded <span class="pull-right">Target: £{{invoice.amountRemaining}}</span></h6>
+            </div>
+            <div class="progress">
+                <div class="progress-bar" style="width: {{invoice.percentageFunded}}%; background-color: #1ABC9C"></div>
             </div>
         </div>
-        <div class="col-xs-2" style="height: 40px; background-color: pink">
-
+        <div class="col-xs-2" style="text-align: center;">
+            <div>
+                <h1 style="color: #FFA330">60</h1>
+                <h6>Days Payback</h6>
+            </div>
         </div>
-        <div class="col-xs-2" style="height: 40px; background-color: orange">
-
+        <div class="col-xs-2" style="text-align: center;">
+            <div>
+                <h1 style="color: #FFA330">{{invoice.annualAPR}}%</h1>
+                <h6>APR</h6>
+            </div>
         </div>
     </div>
-   <!-- <div class="container col-lg-push-1 col-xs-10 invoice" >
-        <div class="row col-md-2" style="padding: 0px; text-align: center">
-            <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTKbL7eP8WcYWFZH4CR3Mk2yZx538fmr9YKtSebkUFFlLBBxvWEpW-GTZg" width="120" height="120">
-        </div>
-        <div class="row col-md-6" style="padding: 0px">
-            <h2 style="margin: 5px">Company Name</h2>
-            <table>
-                <tr>
-                    <td style="vertical-align:baseline"><h3 style="margin: 5px">£200,000</h3></td>
-                    <td style="vertical-align:baseline"><h5 style="margin: 5px"> Target amount</h5></td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <td style="vertical-align:baseline"><h3 style="margin: 5px">3%</h3></td>
-                    <td style="vertical-align:baseline"><h5 style="margin: 5px">APR</h5></td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <td style="vertical-align:baseline"><h3 style="margin: 5px">50</h3></td>
-                    <td style="vertical-align:baseline"><h5 style="margin: 5px">Days</h5></td>
-                </tr>
-            </table>
-        </div>
-        <div class="col-md-4 pull-right" style="padding: 0px; text-align: right">
-            <table class="pull-right">
-                <tr>
-                    <td style="vertical-align:baseline"><h3 style="margin: 5px">4</h3></td>
-                    <td style="vertical-align:baseline"><h5 style="margin: 5px"> Investors</h5></td>
-                </tr>
-            </table>
-            <table class="pull-right">
-                <tr>
-                    <td style="vertical-align:baseline"><h3 style="margin: 5px">5</h3></td>
-                    <td style="vertical-align:baseline"><h5 style="margin: 5px">Days</h5></td>
-                </tr>
-            </table>
-        </div>
-        <div class="row col-md-12" style="padding: 0px;margin:0px; height: 30px; background-color: #128f76; text-align: center; color: white;">
-            <h5>100% Funded</h5>
-        </div>
-    </div>-->
 </div>
