--- a/public/home/home.html
+++ b/public/home/home.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../public/css/bootswatch.min.css">
     <link rel="stylesheet" href="../../public/css/invoice.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.css">
+    <link href="../../bower_components/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../../public/css/mystyle.css">
+
     <title></title>
 </head>
 <body class="well" ng-app="invoiceMarketplace" style="padding: 0px">
@@ -44,6 +49,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript"  src="../../public/socket/socketClient.js"></script>
 <script src="../../public/app.js"></script>
+<script src="../../public/service/invoiceService.js"></script>
 <script src="../../public/market/marketController.js"></script>
 <script src="../../public/dashboard/dashboardController.js"></script>
 </html>
