--- a/public/index/index.html
+++ b/public/index/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="../../public/css/mystyle.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../../bower_components/font-awesome/css/font-awesome.css">
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body ng-app="invoiceMarketplace">
     Index html
