added logic to load invoices from the database

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -11,7 +11,7 @@
 
     <title></title>
 </head>
-<body class="well" ng-app="invoiceMarketplace" style="padding: 0px">
+<body class="well" ng-app="invoiceMarketplace" style="padding: 0px;background-color: white">
 
 <nav class="navbar navbar-default"  style="background-color: #ffffff; color: #999999; margin-bottom: 0px">
     <div class="container-fluid">
